backport MODBULKOPS-499